# confutils

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  publish.ps1  restore-encoding.js  restore.cjs  sync-version.cjs  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml
downloads/2.1.22/: ConfUtils_2.1.22_x64_en-US.msi
src/: App.css  App.tsx  PremiumApp.tsx  main.tsx  vite-env.d.ts
src-tauri/: .certificate-placeholder  Cargo.toml  build.rs  confutils.exe.manifest  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/taskbar_tap/: taskbar_tap.cpp
src-tauri/src/: anti_debug.rs  commands.rs  hwid.rs  main.rs  security.rs  taskbar.rs
src/components/: ErrorBoundary.css  ErrorBoundary.tsx
src/contexts/: AuthContext.tsx  LanguageContext.tsx  ModalContext.tsx  NotificationContext.tsx
src/hooks/: useAntiDebug.ts  useHWID.ts
src/i18n/: I18nContext.tsx  tr.ts  tr2.ts  tr3.ts  tr4.ts  tr5.ts  tr_features.ts  tr_tweaks.ts  translations.ts
src/locales/: en.json  tr.json
src/pages/: About.css  About.tsx  AdvancedTweaks.tsx  BackupRecovery.css  BackupRecovery.tsx  Dashboard.css  Dashboard.tsx  Debloater.tsx  Discord.css  Discord.tsx  Fixes.tsx  Installer.css  Installer.tsx  NetworkManager.css  NetworkManager.tsx  Optimization.tsx  Privacy.tsx  (+5 more)
tests/: discordToken.test.ts  health.test.ts
(+106 files in other folders)
